[package]
name = "julia_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
gif = "0.12.0"
image = "0.24.6"
indicatif = { version = "0.17.5", features = ["rayon"] }
nalgebra = "0.32.3"
num = "0.4.0"
rayon = "1.7.0"
